øvringe html sider oprettet

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Forside</title>
 </head>
 <body>
+    <header></header>
     
+    <main></main>
+    
+    <footer>
+        <hr class="seperator">
+            <div>
+                <h3>Navigation</h3>
+                <nav>
+                    <ul>
+                        <li><a href="">Forside</a></li>
+                        <li><a href="">Ydelser</a></li>
+                        <li><a href="">Branding proces</a></li>
+                        <li><a href="">Storytelling</a></li>
+                        <li><a href="">Om Story Media</a></li>
+                        <li><a href="">Kontakt</a></li>
+                        <li><a href=" ">FAQ</a></li>
+                    </ul>
+                </nav>
+                <div>
+                    <p>Søg</p>
+                    <img src="img/søg ikon.png" alt="lup">
+                    <div class="linje"></div>
+                </div>
+            </div>
+
+        <hr class="seperator">
+    </footer>
 </body>
 </html>
