--- a/index.html
+++ b/index.html
@@ -17,23 +17,44 @@
                 <h3>Navigation</h3>
                 <nav>
                     <ul>
-                        <li><a href="">Forside</a></li>
-                        <li><a href="">Ydelser</a></li>
-                        <li><a href="">Branding proces</a></li>
-                        <li><a href="">Storytelling</a></li>
-                        <li><a href="">Om Story Media</a></li>
-                        <li><a href="">Kontakt</a></li>
-                        <li><a href=" ">FAQ</a></li>
+                        <li><a href="index.html">Forside</a></li>
+                        <li><a href="ydelser.html">Ydelser</a></li>
+                        <li><a href="branding-proces.html">Branding proces</a></li>
+                        <li><a href="storytelling.html">Storytelling</a></li>
+                        <li><a href="om-story-media.html">Om Story Media</a></li>
+                        <li><a href="kontakt.html">Kontakt</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                     </ul>
                 </nav>
                 <div>
                     <p>Søg</p>
-                    <img src="img/søg ikon.png" alt="lup">
                     <div class="linje"></div>
+                    <img src="img/søg ikon.png" alt="lup">
                 </div>
             </div>
 
+            <img src="img/Logo - ikon ovenpå tekst.png" alt="story media logo">
+
+            <div>
+                <h3>Tilmeld nyhedsbrev</h3>
+                <form>
+                    <label class="visually-hidden" for="mail">E-mail</label>
+                    <input id="mail" type="email" placeholder="E-mail">
+                    
+                    <input type="submit" name="submit" value="Tilmeld">
+                </form>
+                
+                <a href="#"><img src="img/instagram ikon.png" alt="Instagram ikon"></a>
+                <a href="#"><img src="img/linkedin ikon.png" alt="LinkedIn ikon"></a>
+                <a href="#"><img src="img/facebook ikon.png" alt="Facebook ikon"></a>
+
+                <a href="mailto:info@storymedia.com">info@storymedia.com<img src="img/mail ikon.png" alt="mailikon"></a>
+                <a href="tel:+4599999999">+45 99 99 99 99<img src="img/telefon ikon.png" alt="telefon ikon"></a>
+
+            </div>
+
         <hr class="seperator">
+        <p>Copyright &copy; 2023 Story Media. All rights reserved.</p>
     </footer>
 </body>
 </html>
