Indsat html i ydelser.html

--- a/ydelser.html
+++ b/ydelser.html
@@ -11,7 +11,136 @@
 
     <header></header>
 
-    <Main></Main>
+    <main>
+        <section>
+            <h1>Vi har en løsning til dit behov</h1>
+            <p>Uanset om du er klar til den fulde brandingpakke eller blot har brug for en løsning på en specifik opgave, så kan vi hjælpe.</p>
+            <a href="#">Gå til pakkerne</a>
+            <img src="img/illustration - ydelser.png" alt="Illustration af pige på kontor">
+        </section>
+
+        <section>
+            <img src="img/Visuelidentitet.png" alt="Billede af postkort">
+            <p>Stå stærkere</p>
+            <h2>Din visuelle identitet</h2>
+            <p>Din visuelle identitet er alt det, du har brug for, for at komme i gang med dit brand.</p>
+            <p>Vi skaber en sammenhængende og unik fortælling om dit brand med fokus på enkle og effektive elementer.</p>
+            <p>En brand identitet er en målrettet repræsentation af din virksomheds identitet. Det handler om at formidle din historie og dine værdier samt differentiere dig fra mængden.</p>
+            <p>Vi har skabt en lille og en stor brandingpakke, der kan starte din virksomheds visuelle identitet op.</p>
+        </section>
+
+        <div>
+            <section>
+                <h2>Den "lille"</h2>
+                <p>Visuelle identitet</p>
+                <ul>
+                    <li>Moodboard</li>
+                    <li>Primær logo</li>
+                    <li>Sekundær logo</li>
+                    <li>Farvepallette</li>
+                    <li>Typografi</li>
+                </ul>
+                <p>Pris: 3.650,- ex moms</p>
+                <a href="kontakt.html">Kontakt</a>
+            </section>
+
+            <section>
+                <h2>Den "store"</h2>
+                <p>Visuelle identitet</p>
+                <ul>
+                    <li>Kreativ brainstorm</li>
+                    <li>Moodboards (3 stk)</li>
+                    <li>Primær logo</li>
+                    <li>Sekundær logo</li>
+                    <li>Farvepallette</li>
+                    <li>Typografi</li>
+                    <li>Skabeloner til some</li>
+                    <li>Visitkort / plakat</li>
+                </ul>
+                <p>Pris: 5.850,- ex moms</p>
+                <a href="kontakt.html">Kontakt</a>
+            </section>
+        </div>
+
+        <h2>Skræddersy din hjemmeside</h2>
+        <p>Din hjemmeside er dit ansigt udad til kunden. Den skal fange din kundes opmærksomhed gennem din unikke fortælling om din virksomhed.</p>
+        <p>Du har få sekunder på din hjemmeside til at fange din kundes interesse. Derfor skal udtrykket og følelsen for din passion være spot on fra første øjekast. Vi hjælper din virksomhed med at skille sig ud, blive bemærket og vokse til at blive det unikke brand du drømmer om.</p>
+
+        <div class="orangebaggrundydelser"></div>
+        <div>
+            <section>
+                <h2>Lille</h2>
+                <p>Hjemmeside</p>
+                <h2>12.500,-</h2>
+                <p>Ex. moms</p>
+                <div class="linjeydelser"></div>
+                <ul>
+                    <li>4-6 sider</li>
+                    <li>Unik storytelling</li>
+                    <li>Originalt webdesign</li>
+                    <li>1 korrektur af design</li>
+                    <li>Responsivt design tilpasser computer, tablet og mobil</li>
+                    <li>SEO optimeret</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Mellem</h2>
+                <p>Hjemmeside</p>
+                <h2>22.000,-</h2>
+                <p>Ex. moms</p>
+                <div class="linjeydelser"></div>
+                <ul>
+                    <li>7-12 sider</li>
+                    <li>Unik storytelling</li>
+                    <li>Originalt webdesign</li>
+                    <li>2 korrektur gennemgange af design</li>
+                    <li>Responsivt design tilpasser computer, tablet og mobil</li>
+                    <li>SEO optimeret</li>
+                    <li>1 måneds support (opdatering af hjemmeside)</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Stor</h2>
+                <p>Hjemmeside</p>
+                <h2>28.000,-</h2>
+                <p>Ex. moms</p>
+                <div class="linjeydelser"></div>
+                <ul>
+                    <li>12+ sider</li>
+                    <li>Unik storytelling</li>
+                    <li>Originalt webdesign</li>
+                    <li>2 korrektur gennemgange af design</li>
+                    <li>Responsivt design tilpasser computer, tablet og mobil</li>
+                    <li>SEO optimeret</li>
+                    <li>3 måneders support (opdatering af hjemmeside)</li>
+                </ul>
+            </section>
+        </div>
+
+        <hr class="seperatorbeige">
+
+        <section>
+            <h2>Den specifikk</h2>
+            <p>Har du kun brug for hjælp til specifikke opgaver, er det også en mulighed. Vi har listet nogle af de dele op, som vi ved, der er brug for. </p>
+            <p>Listen er ikke udtømmende - du er velkommen til at kontakte os med lige præcis dit behov.</p>
+            <ul>
+                <li>Logo</li>
+                <li>Bannere</li>
+                <li>Plakater</li>
+                <li>Visitkort</li>
+                <li>Moodboard</li>
+                <li>Typografi</li>
+                <li>Farvepalette</li>
+                <li>Skabeloner til SoMe</li>
+                <li>Gennemgang af eksisterende website</li>
+            </ul>
+        </section>
+        <img src="img/" alt="Billede af lys">
+
+        <hr class="seperatorbeige">
+
+        <a href="#"> <img src="img/pil op.png" alt="Pil til toppen"></a>
+    </main>
 
     <footer>
         <hr class="seperator">
