Indsat billede af stearinlys i ydelser.html

--- a/ydelser.html
+++ b/ydelser.html
@@ -135,7 +135,7 @@
                 <li>Gennemgang af eksisterende website</li>
             </ul>
         </section>
-        <img src="img/" alt="Billede af lys">
+        <img src="img/Stearinlys.png" alt="Billede af lys">
 
         <hr class="seperatorbeige">
 
