Indsat html i branding-proces.html

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -10,7 +10,82 @@
 <body>
     <header></header>
     
-    <main></main>
+    <main>
+
+        <section>
+            <h1>Branding proces one on one</h1>
+            <p>At skabe den visuelle del af dit brand, kræver research, analyse og kreativitet.</p>
+            <p>Vores proces sikrer dig et professionelt resultat. Få et indblik i processen herunder.</p>
+            <a href="kontakt.html">Kontakt os</a>
+            <img src="img/" alt="Illustration af computer">
+        </section>
+
+        <div>
+            <section>
+                <h2>Hvad gør din virksomhed unik?</h2>
+                <p>Vi analyserer og laver research</p>
+                <ul>
+                    <li>din unikke historie</li>
+                    <li>styrker og svagheder</li>
+                    <li>konkurrence</li>
+                    <li>brand position</li>
+                    <li>value proposition</li>
+                    <li>unique selling point</li>
+                </ul>
+            </section>
+            <img src="img/branding proces - unik.png" alt="Kvinde med ipad">
+        </div>
+
+        <div>
+            <section>
+                <h2>Hvem er den perfekte kunde?</h2>
+                <p>Vi finder din perfekte kunde, så du kan målrette din markedsføring</p>
+                <ul>
+                    <li>målgruppe</li>
+                    <li>persona</li>
+                    <li>sprog</li>
+                    <li>SMUK modellen</li>
+                </ul>
+            </section>
+            <img src="img/branding proces - kunde.png" alt="Finger peger på en computerskærm">
+        </div>
+
+        <div>
+            <section>
+                <h2>Visuel identitet</h2>
+                <p>Vi finder i samarbejde frem til farver og design, der giver den helt rigtige følelse af dit brand.</p>
+                <ul>
+                    <li>moodboard</li>
+                    <li>farvepalette</li>
+                    <li>logo</li>
+                    <li>grafisk design</li>
+                    <li>website</li>
+                </ul>
+            </section>
+            <img src="img/branding proces - identitet.png" alt="Postkort på et bord">
+        </div>
+
+        <div>
+            <section>
+                <h2>Markedsføring</h2>
+                <p>Vi sammensætter en markeds-føringsstrategi sammen med dig som både er effektiv og realistisk.</p>
+                <ul>
+                    <li>strategi</li>
+                    <li>bannere</li>
+                    <li>plakater</li>
+                    <li>SoMe</li>
+                </ul>
+            </section>
+            <img src="img/branding proces - markedsfoering.png" alt="Billede med teksten Passion led us here">
+        </div>
+
+        <h2>Road to succes</h2>
+
+        <a href="kontakt.html">Kontakt os</a>
+
+        <a href="#"> <img src="img/pil op.png" alt="Pil til toppen"></a>
+
+    </main>
     
     <footer>
         <hr class="seperator">
