Tilføjet illustration i toppen af branding-proces

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -17,7 +17,7 @@
             <p>At skabe den visuelle del af dit brand, kræver research, analyse og kreativitet.</p>
             <p>Vores proces sikrer dig et professionelt resultat. Få et indblik i processen herunder.</p>
             <a href="kontakt.html">Kontakt os</a>
-            <img src="img/" alt="Illustration af computer">
+            <img src="img/Illustration - branding proces top.png" alt="Illustration af computer">
         </section>
 
         <div>
