Erstattet forkert billede til branding

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -12,13 +12,14 @@
     
     <main>
 
-        <section>
+        <section class="branding-hero">
             <h1>Branding proces one on one</h1>
             <p>At skabe den visuelle del af dit brand, kræver research, analyse og kreativitet.</p>
             <p>Vores proces sikrer dig et professionelt resultat. Få et indblik i processen herunder.</p>
             <a href="kontakt.html">Kontakt os</a>
-            <img src="img/Illustration - branding proces top.png" alt="Illustration af computer">
         </section>
+            <img src="img/Illustration - branding proces top.png" alt="Illustration af computer">
+        
 
         <div>
             <section>
