--- a/branding-proces.html
+++ b/branding-proces.html
@@ -13,13 +13,13 @@
     <main class="branding-main">
         
         <div class="hero-container">    
-            <article class="branding-hero">
+            <article class="hero-tekst">
                 <h1>Branding proces one on one</h1>
                 <p>At skabe den visuelle del af dit brand, kræver research, analyse og kreativitet.</p>
                 <p class="hero-gap-til-knap">Vores proces sikrer dig et professionelt resultat. Få et indblik i processen herunder.</p>
                 <a href="kontakt.html">Kontakt os</a>
             </article>
-            <div class="branding-hero-img">
+            <div class="hero-img">
                 <img  src="img/Illustration - branding proces top.png" alt="Illustration af computer">
             </div>
         </div>
