Første ændringer til kasserne i branding proces

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -35,8 +35,8 @@
        
         <!--Hovedindhold-->
        
-        <div>
-            <section>
+        <div class="branding-container">
+            <section class="branding-tekst-bokse" >
                 <h2>Hvad gør din virksomhed unik?</h2>
                 <p>Vi analyserer og laver research</p>
                 <ul>
@@ -48,7 +48,9 @@
                     <li>unique selling point</li>
                 </ul>
             </section>
-            <img src="img/branding proces - unik.png" alt="Kvinde med ipad">
+            <div class="branding-img-bokse">
+                <img class="branding-kasseimg" src="img/branding proces - unik.png" alt="Kvinde med ipad">
+            </div>
         </div>
 
         <div>
@@ -62,7 +64,7 @@
                     <li>SMUK modellen</li>
                 </ul>
             </section>
-            <img src="img/branding proces - kunde.png" alt="Finger peger på en computerskærm">
+            <img class="branding-kasseimg" src="img/branding proces - kunde.png" alt="Finger peger på en computerskærm">
         </div>
 
         <div>
@@ -77,7 +79,7 @@
                     <li>website</li>
                 </ul>
             </section>
-            <img src="img/branding proces - identitet.png" alt="Postkort på et bord">
+            <img class="branding-kasseimg" src="img/branding proces - identitet.png" alt="Postkort på et bord">
         </div>
 
         <div>
@@ -91,7 +93,7 @@
                     <li>SoMe</li>
                 </ul>
             </section>
-            <img src="img/branding proces - markedsfoering.png" alt="Billede med teksten Passion led us here">
+            <img class="branding-kasseimg" src="img/branding proces - markedsfoering.png" alt="Billede med teksten Passion led us here">
         </div>
 
         <h2>Road to succes</h2>
