--- a/ydelser.html
+++ b/ydelser.html
@@ -11,14 +11,27 @@
 
     <header></header>
 
-    <main>
-        <section>
-            <h1>Vi har en løsning til dit behov</h1>
-            <p>Uanset om du er klar til den fulde brandingpakke eller blot har brug for en løsning på en specifik opgave, så kan vi hjælpe.</p>
-            <a href="#">Gå til pakkerne</a>
-            <img src="img/illustration - ydelser.png" alt="Illustration af pige på kontor">
-        </section>
+    <main class="ydelser-main">
 
+        <div class="hero-container">
+            <article class="hero-tekst">
+                <h1>Vi har en løsning til dit behov</h1>
+                <p class="hero-gap-til-knap">Uanset om du er klar til den fulde brandingpakke eller blot har brug for en løsning på en specifik opgave, så kan vi hjælpe.</p>
+                <a href="#">Gå til pakkerne</a>
+            </article>
+            <div class="hero-img">
+                <img src="img/illustration - ydelser.png" alt="Illustration af pige på kontor">
+            </div>
+        </div>
+
+        <!--Chevron-->
+        
+        <div class="chevron-container">
+            <img class="chevron" src="img/Chevron.png" alt="Pil ned">
+       </div>
+
+       <!--Hovedindhold-->
+       
         <section>
             <img src="img/Visuelidentitet.png" alt="Billede af postkort">
             <p>Stå stærkere</p>
