--- a/ydelser.html
+++ b/ydelser.html
@@ -31,19 +31,23 @@
        </div>
 
        <!--Hovedindhold-->
-       
-        <section>
-            <img src="img/Visuelidentitet.png" alt="Billede af postkort">
-            <p>Stå stærkere</p>
-            <h2>Din visuelle identitet</h2>
-            <p>Din visuelle identitet er alt det, du har brug for, for at komme i gang med dit brand.</p>
-            <p>Vi skaber en sammenhængende og unik fortælling om dit brand med fokus på enkle og effektive elementer.</p>
-            <p>En brand identitet er en målrettet repræsentation af din virksomheds identitet. Det handler om at formidle din historie og dine værdier samt differentiere dig fra mængden.</p>
-            <p>Vi har skabt en lille og en stor brandingpakke, der kan starte din virksomheds visuelle identitet op.</p>
-        </section>
 
-        <div>
-            <section>
+       <div class="stark-container">
+            <img src="img/Visuelidentitet.png" alt="Billede af postkort">
+
+            <article>
+                <p>Stå stærkere</p>
+                <h2>Din visuelle identitet</h2>
+                <p>Din visuelle identitet er alt det, du har brug for, for at komme i gang med dit brand.</p>
+                <p>Vi skaber en sammenhængende og unik fortælling om dit brand med fokus på enkle og effektive elementer.</p>
+                <p>En brand identitet er en målrettet repræsentation af din virksomheds identitet. Det handler om at formidle din historie og dine værdier samt differentiere dig fra mængden.</p>
+                <p>Vi har skabt en lille og en stor brandingpakke, der kan starte din virksomheds visuelle identitet op.</p>
+            </article>
+        </div>
+
+        <!--visuelle pakker-->
+        <div class="vispakker-container">
+            <article class="vis-et">
                 <h2>Den "lille"</h2>
                 <p>Visuelle identitet</p>
                 <ul>
@@ -53,11 +57,13 @@
                     <li>Farvepallette</li>
                     <li>Typografi</li>
                 </ul>
-                <p>Pris: 3.650,- ex moms</p>
-                <a href="kontakt.html">Kontakt</a>
-            </section>
+                <div class="kontakt-visuel-container">
+                    <p>Pris: 3.650,- ex moms</p>
+                    <a class="kontaktvisuel" href="kontakt.html">Kontakt</a>
+                </div>
+            </article>
 
-            <section>
+            <article class="vis-to">
                 <h2>Den "store"</h2>
                 <p>Visuelle identitet</p>
                 <ul>
@@ -70,9 +76,11 @@
                     <li>Skabeloner til some</li>
                     <li>Visitkort / plakat</li>
                 </ul>
-                <p>Pris: 5.850,- ex moms</p>
-                <a href="kontakt.html">Kontakt</a>
-            </section>
+                <div class="kontakt-visuel-container">
+                    <p>Pris: 5.850,- ex moms</p>
+                    <a class="kontaktvisuel" href="kontakt.html">Kontakt</a>
+                </div>
+            </article>
         </div>
 
         <h2>Skræddersy din hjemmeside</h2>
