Styling af hjemmesidekasser på ydelser.html

--- a/ydelser.html
+++ b/ydelser.html
@@ -83,13 +83,16 @@
             </article>
         </div>
 
-        <h2>Skræddersy din hjemmeside</h2>
-        <p>Din hjemmeside er dit ansigt udad til kunden. Den skal fange din kundes opmærksomhed gennem din unikke fortælling om din virksomhed.</p>
-        <p>Du har få sekunder på din hjemmeside til at fange din kundes interesse. Derfor skal udtrykket og følelsen for din passion være spot on fra første øjekast. Vi hjælper din virksomhed med at skille sig ud, blive bemærket og vokse til at blive det unikke brand du drømmer om.</p>
+        <article class="hjemmesidetekst">
+            <h2>Skræddersy din hjemmeside</h2>
+            <p>Din hjemmeside er dit ansigt udad til kunden. Den skal fange din kundes opmærksomhed gennem din unikke fortælling om din virksomhed.</p>
+            <p>Du har få sekunder på din hjemmeside til at fange din kundes interesse. Derfor skal udtrykket og følelsen for din passion være spot on fra første øjekast. Vi hjælper din virksomhed med at skille sig ud, blive bemærket og vokse til at blive det unikke brand du drømmer om.</p>
+        </article>
 
         <div class="orangebaggrundydelser"></div>
-        <div>
-            <section>
+        
+        <div class="hjemmesidekasse-container">
+            <section class="hjemmesidekasse">
                 <h2>Lille</h2>
                 <p>Hjemmeside</p>
                 <h2>12.500,-</h2>
@@ -104,7 +107,7 @@
                     <li>SEO optimeret</li>
                 </ul>
             </section>
-            <section>
+            <section class="hjemmesidekasse">
                 <h2>Mellem</h2>
                 <p>Hjemmeside</p>
                 <h2>22.000,-</h2>
@@ -120,7 +123,7 @@
                     <li>1 måneds support (opdatering af hjemmeside)</li>
                 </ul>
             </section>
-            <section>
+            <section class="hjemmesidekasse">
                 <h2>Stor</h2>
                 <p>Hjemmeside</p>
                 <h2>28.000,-</h2>
