Styling af den specifikke på ydelser.html

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -8,7 +8,7 @@
     <title>Forside</title>
 </head>
 <body>
-    <header id="tiltoppen">
+    <header id="tiltopbranding">
 
 
     </header>
@@ -111,7 +111,7 @@
         </div>
 
         <!--Pil til toppen-->
-        <a class="pilop"  href="#tiltoppen"> <img class="pilopimg" src="img/pil op.png" alt="Pil til toppen"></a>
+        <a class="pilop"  href="#tiltopbranding"> <img class="pilopimg" src="img/pil op.png" alt="Pil til toppen"></a>
 
     </main>
     
