--- a/ydelser.html
+++ b/ydelser.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <header></header>
+    <header id="tiltopydelser"></header>
 
     <main class="ydelser-main">
 
@@ -143,27 +143,31 @@
 
         <hr class="seperatorbeige">
 
-        <section>
-            <h2>Den specifikk</h2>
-            <p>Har du kun brug for hjælp til specifikke opgaver, er det også en mulighed. Vi har listet nogle af de dele op, som vi ved, der er brug for. </p>
-            <p>Listen er ikke udtømmende - du er velkommen til at kontakte os med lige præcis dit behov.</p>
-            <ul>
-                <li>Logo</li>
-                <li>Bannere</li>
-                <li>Plakater</li>
-                <li>Visitkort</li>
-                <li>Moodboard</li>
-                <li>Typografi</li>
-                <li>Farvepalette</li>
-                <li>Skabeloner til SoMe</li>
-                <li>Gennemgang af eksisterende website</li>
-            </ul>
-        </section>
-        <img src="img/Stearinlys.png" alt="Billede af lys">
+        <div  class="specifikke">
+            <article class="specifiktekst">
+                <h2>Den specifikke</h2>
+                <p>Har du kun brug for hjælp til specifikke opgaver, er det også en mulighed. Vi har listet nogle af de dele op, som vi ved, der er brug for. </p>
+                <p>Listen er ikke udtømmende - du er velkommen til at kontakte os med lige præcis dit behov.</p>
+                <ul class="hero-gap-til-knap">
+                    <li>Logo</li>
+                    <li>Bannere</li>
+                    <li>Plakater</li>
+                    <li>Visitkort</li>
+                    <li>Moodboard</li>
+                    <li>Typografi</li>
+                    <li>Farvepalette</li>
+                    <li>Skabeloner til SoMe</li>
+                    <li>Gennemgang af eksisterende website</li>
+                </ul>
+                <a class="kontakt" href="kontakt.html">Kontakt os for pris</a>
+            </article>
+            <img src="img/Stearinlys.png" alt="Billede af lys">
+        </div>
+
 
         <hr class="seperatorbeige">
 
-        <a href="#"> <img src="img/pil op.png" alt="Pil til toppen"></a>
+        <a class="pilop" href="#tiltopydelser"> <img class="pilopimg" src="img/pil op.png" alt="Pil til toppen"></a>
     </main>
 
     <footer>
