Tilretning af footer og top på ydelser.html

--- a/storytelling.html
+++ b/storytelling.html
@@ -155,7 +155,7 @@
             <div class="footergrid">
                 <div class="footernav">
                     <nav>
-                        <h3>Navigation</h3>
+                        <h5>Navigation</h5>
                         <ul>
                             <li><a href="index.html">Forside</a></li>
                             <li><a href="ydelser.html">Ydelser</a></li>
@@ -168,7 +168,7 @@
                     </nav>
                     <div>
                         <img class="sogikon" src="img/søg ikon.png" alt="lup">
-                        <p>Søg</p>
+                        <h5>Søg</h5>
                         <div class="linje"></div>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
 
                 <div class="footerform">
                     <div class="nyhedsbrev">
-                        <h3>Tilmeld nyhedsbrev</h3>
+                        <h5>Tilmeld nyhedsbrev</h5>
                         <form>
                             <label class="visually-hidden" for="mail"></label>
                             <input id="mail" type="email" placeholder="E-mail">
@@ -203,7 +203,7 @@
                 </div>
             </div>
         <hr class="seperator">
-        <p class="copy">Copyright &copy; 2023 Story Media. All rights reserved.</p>
+        <h5 class="copy">Copyright &copy; 2023 Story Media. All rights reserved.</h5>
     </footer>
 </body>
 </html>
