--- a/ydelser.html
+++ b/ydelser.html
@@ -60,7 +60,7 @@
             <img src="img/Visuelidentitet.png" alt="Billede af postkort">
 
             <article>
-                <p>Stå stærkere</p>
+                <h4 class="overoverskrift">Stå stærkere</h4>
                 <h2>Din visuelle identitet</h2>
                 <p>Din visuelle identitet er alt det, du har brug for, for at komme i gang med dit brand.</p>
                 <p>Vi skaber en sammenhængende og unik fortælling om dit brand med fokus på enkle og effektive elementer.</p>
