Ændring af baggrundsbillede brandingproces.html

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/global.css">
     <title>Forside</title>
 </head>
-<body class="BGbillede-ydelser">
+<body class="BGbillede-branding">
 
     <header class="header1" id="tiltopbranding">
         <a href="index.html"><img src="img/Logo - ikon+tekst på linje.png" alt="Story Media logo" class="headerlogo"></a>
